--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/ietEjKhpCNQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
      <iframe src="https://scratch.mit.edu/projects/360222614/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
-
-  </body>
+    
+    <ul>
+      <li>    Synthesizers I used:</li>
+      <li>ES1 which uses subtractive synthesis</li>
+      <li>ES2 which combines subtractive synthesis with elements of FM and wavetable synthesis</li>
+      <li>EFM1 is a powerful frequency modulation synthesizer</li>
+      <li>RetroSynth is a 16-voice synthesizer</li>
+      <li>ES M is a monophonic synthesizer used for bass sounds that punch</li>
+      <li>Ultrabeat is a synthesizer used to create percussive sounds and polyphonic rhythms</li>
+    </ul>
+    
+ </body>
 </html>
